add ed new photoes

--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
         <div class="image-container"><img src="photos/jpg/29.jpg" alt="Image 29" onclick="openModal(this)"></div>
         <div class="image-container"><img src="photos/jpg/30.jpg" alt="Image 30" onclick="openModal(this)"></div>
         
-        <!-- PNG Image paths -->
-        <div class="image-container"><img src="photos/png/1.png" alt="Image 31" onclick="openModal(this)"></div>
-        <div class="image-container"><img src="photos/png/2.png" alt="Image 32" onclick="openModal(this)"></div>
-        <div class="image-container"><img src="photos/png/3.png" alt="Image 33" onclick="openModal(this)"></div>
+    <!-- PNG Image paths -->
+    <div class="image-container"><img src="photos/png/1.png" alt="Image 31" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/png/2.png" alt="Image 32" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/png/3.png" alt="Image 33" onclick="openModal(this)"></div>
+
+    <!-- New 2025 PNG images (comnuting) -->
+    <div class="image-container"><img src="photos/new 2025/1.png" alt="comnuting 1" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/2.png" alt="comnuting 2" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/3.png" alt="comnuting 3" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/4.png" alt="comnuting 4" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/5.png" alt="comnuting 5" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/6.png" alt="comnuting 6" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/7.png" alt="comnuting 7" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/8.png" alt="comnuting 8" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/9.png" alt="comnuting 9" class="comnuting" onclick="openModal(this)"></div>
+    <div class="image-container"><img src="photos/new 2025/10.png" alt="comnuting 10" class="comnuting" onclick="openModal(this)"></div>
     </div>
     
     <div id="modal" class="modal">
